Update dependencies and improve GUI initialization
- Bump `oshi-core` to 6.9.0
- Bump `lombok` to 1.18.42
- Update Gradle to 9.1.0
- Set Java source and target compatibility to 25
- Add JVM arguments for native access in test and JavaExec tasks
- Refactor GUI initialization in `PictureInformationViewer` and `ExitControlDialog`
- Add thread for initializing `PaintPicturePanel` in `GUIStarter`